--- a/django_series/template/website/index.html
+++ b/django_series/template/website/index.html
@@ -5,7 +5,7 @@ Home page
 {% endblock %}
 
 {% block content %}
-<h1>chai aur code home page</h1>
+<h1 class="bg-orange-500 text-3xl">chai aur code home page</h1>
 {% endblock %}
 
  
