--- a/django_series/chai/templates/chai/all_chai.html
+++ b/django_series/chai/templates/chai/all_chai.html
@@ -1,11 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All chai</title>
-</head>
-<body>
-   <h1>  all types of available chai</h1>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block tile %}
+chai page
+{% endblock tile %}
+
+{% block content  %}
+<h1> All chai for you </h1>
+<div class="grid grid-cols-3 gap-4 m-4 rounded" >
+
+
+{% for chai in chais  %}
+<div class="bg-red-800 p-5">
+    <img class='rounded' src=" {{chai.image.url}}" alt="">
+    <h3 class="text-2xl font-bold"> {{chai.name}} </h3>
+    <a href="{% url 'chai_detail' chai.id %}">
+        <button
+        type="button"
+        class="inline-flex items-center w-[100%] justify-center px-4
+        py-2 border border-transparent text-sm font-medium
+        rounded-md text-white bg-orange-600 hover:bg-orange-700
+        focus:outline-none focus:ring-2 focus:ring-offset-2
+        focus:ring-orange-500
+        "
+        >
+        {{chai.type}} - {{chai.id}}
+    </button>
+</a>
+</div>
+{% endfor %} 
+</div>
+{% endblock  %}
+
