--- a/django_series/static/style.css
+++ b/django_series/static/style.css
@@ -1,6 +1,7 @@
 body{
-    background-color: rgb(49, 16, 199);
+    background-color: rgb(29, 4, 143);
     color:wheat;
+    width: 100%;
 }
 h1{
     text-align: center;
